--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: inherit;
 }
 
 nav{
@@ -639,12 +639,11 @@ img {
 }
 .post .post-content .hashtag{
     color: #0866FF;
+    margin-bottom: 10px;
 }
 .post-content img{
     width:590px;
     height:590px;
-    margin-top:10px;
-    margin-bottom: 10px;
 }
 .post-content >video{
     width:590px;
@@ -667,6 +666,98 @@ img {
     padding: 4px;
     align-items: center;
 }
+.post-content .bg-ct .album-img {
+    height:482px;
+    width: 590px;
+    flex:1;
+    display: flex;
+    flex-direction: column;
+}
+.post-content .bg-ct .album-img .i2-img-ln-1{
+    display: flex;
+    height:300px;
+}
+.post-content .bg-ct .album-img .i2-img-ln-1 .img-1-album{
+    width:297px;
+    height:360px;
+    padding-right: 4px;
+}
+.post-content .bg-ct .album-img .i2-img-ln-1 .img-2-album{
+    width:293px;
+    height:360px;
+}
+.post-content .bg-ct .album-img .i2-img-ln-1 .img-1-album img{
+    width:293px;
+    height:360px;
+}
+.post-content .bg-ct .album-img .i2-img-ln-1 .img-2-album img{
+    width:293px;
+    height:360px;
+}
+
+
+.post-content .bg-ct .album-img .i3-img-ln-2{
+    display: flex;
+    height:184px;
+    padding-top: 4px;
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
+}
+
+.post-content .bg-ct .album-img .i3-img-ln-2 .img-3-album{
+    width: 198px;
+    height: 190px;
+    padding-right: 4px;
+    overflow: hidden;
+}
+.post-content .bg-ct .album-img .i3-img-ln-2 .img-4-album{
+    width: 198px;
+    height: 190px;
+    padding-right: 4px;
+    overflow: hidden;
+}
+.post-content .bg-ct .album-img .i3-img-ln-2 .img-5-album{
+    width: 194px;
+    height: 190px;
+    overflow: hidden;
+}
+.post-content .bg-ct .album-img .i3-img-ln-2 .img-3-album img{
+    width: 194px;
+    height: 234px;
+    overflow: hidden;
+}
+.post-content .bg-ct .album-img .i3-img-ln-2 .img-4-album img{
+    width: 194px;
+    height: 234px;
+    overflow: hidden;
+}
+.post-content .bg-ct .album-img .i3-img-ln-2 .img-5-album img{
+    width: 194px;
+    height: 234px;
+    overflow: hidden;
+}
+
+.post-content .bg-ct .album-img .i3-img-ln-2 .blur-more-img{
+    position: absolute;
+    z-index: 2;
+    width:194px;
+    height:190px;
+    background-color: #65676B;
+    opacity: 0.8;
+    margin-left: 396px;
+}
+.post-content .bg-ct .album-img .i3-img-ln-2 .blur-more-img p{
+    font-size: 30px;
+    color: white;
+    position: absolute;
+    z-index: 3;
+    opacity: 1;
+    align-items: center;
+    margin-left: 54.4px;
+    margin-top: 79.8px;
+}
+
 
 /* ------ */
 .post-bot .like-descrip{
@@ -777,17 +868,17 @@ img {
 .like-btn{
     align-items: center;
     display: flex;
-    margin-left: 25px;
+    margin-left: 35px;
 }
 .cmt-btn{
     align-items: center;
     display: flex;
-    margin-left: 5px;
+    margin-left: 25px;
 }
 .share-btn{
     align-items: center;
     display: flex;
-    margin-left: 15px;
+    margin-left: 45px;
 }
 
 svg{
@@ -880,21 +971,75 @@ hr.line{
 .cmt-bl-post .public-cmt .cmt-top{
     display: flex;
     width:500px;
-    height:93.58px;
+    height:83.58px;
     padding:4px 0px 0px 16px;
 }
+
 .cmt-bl-post .public-cmt .cmt-top .avt-in-public-cmt img{
     width:32px;
     height:32px;
     border-radius: 50px;
-    scale:1.2
+    margin-top: 5px;
 }
-.cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-top{
+.cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-top-1{
+    width:115px;
+    padding: 8px 12px;
+    border-radius: 20px;
+    background: #F0F2F5;
+    margin-left: 7px;
+}
+.cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-top-2{
     width:494px;
     padding: 8px 12px;
     border-radius: 20px;
     background: #F0F2F5;
     margin-left: 7px;
+}
+.cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-top-3{
+    width:340px;
+    padding: 8px 12px;
+    border-radius: 20px;
+    background: #F0F2F5;
+    margin-left: 7px;
+}
+.cmt-bl-post .public-cmt .cmt-top-4 .cmt-ct .cmt-ct-top-4-1{
+    width: 220px;
+    padding: 8px 12px;
+    border-radius: 20px;
+    background: #F0F2F5;
+    margin-left: 7px;
+}
+.cmt-bl-post .public-cmt .cmt-top-4 .cmt-ct .cmt-ct-top-4-2{
+    width:120px;
+    padding: 8px 12px;
+    border-radius: 20px;
+    background: #F0F2F5;
+    margin-left: 7px;
+}
+.cmt-ct-img-4-1{
+    width:183px;
+    height:210px;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-bottom: 5px;
+}
+.cmt-ct-img-4-1 img{
+    width:183px;
+    height:210px;
+    border-radius: 10px;
+    
+}
+.cmt-ct-img-4-2{
+    width:183px;
+    height:210px;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-bottom: 5px;
+}
+.cmt-ct-img-4-2 img{
+    width:183px;
+    height:210px;
+    border-radius: 10px;
 }
 .cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-top a{
     font-size: 13px;
@@ -914,6 +1059,43 @@ hr.line{
     display: flex;
 }
 .cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-bot ul >li{
+   margin-left: 10px;
+   font-size:12px;
+   color:#65676B;
+}
+
+
+.cmt-bl-post .public-cmt .cmt-top-4{
+    display: flex;
+    width:500px;
+    height:288.58px;
+    padding:4px 0px 0px 16px;
+}
+
+.cmt-bl-post .public-cmt .cmt-top-4 .avt-in-public-cmt img{
+    width:32px;
+    height:32px;
+    border-radius: 50px;
+    margin-top: 5px;
+}
+.cmt-bl-post .public-cmt .cmt-top-4 .cmt-ct .cmt-ct-top a{
+    font-size: 13px;
+    color:#050505;
+}
+.cmt-bl-post .public-cmt .cmt-top-4 .cmt-ct .cmt-ct-top p{
+    font-size: 15px;
+    color:#050505;
+}
+
+.cmt-bl-post .public-cmt .cmt-top-4 .cmt-ct .cmt-ct-bot ul{
+    width:163.1px;
+    height:18px;
+    margin: 0px -8px 0px 4px;
+    padding: 3px 0px 0px;
+    list-style-type: none;
+    display: flex;
+}
+.cmt-bl-post .public-cmt .cmt-top-4 .cmt-ct .cmt-ct-bot ul >li{
    margin-left: 10px;
    font-size:12px;
    color:#65676B;
